# dummy-wca-live

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
src/: handler.rs  main.rs  route.rs  schema.rs
templates/: index.html
